# cockpit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESCRIPTION.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  main_static.py
app/api/: __init__.py  achievements.py  chat.py  chat_sessions.py  llm.py  llm_settings.py  projects.py  snapshot.py  tasks.py  ws.py
app/core/: __init__.py  chat.py  config.py  focus.py  models.py  storage.py
app/llm/: __init__.py  anthropic.py  base.py  chat_engine.py  ollama.py  openai.py  router.py  tools.py
app/llm/prompts/: __init__.py  cockpit_system.md
app/tests/: __init__.py  conftest.py  test_api_achievements_cv_status.py  test_api_base_invariants.py  test_api_complete_task.py  test_api_patch_due_null.py  test_api_task_patch_inline_edit.py  test_archive_project_invariants.py  test_chat_input_invariants.py  test_chat_sessions.py  test_chatwindow_refactor_invariants.py  test_complete_path_invariants.py  test_focus.py  test_markdown_fallback.py  test_markdown_render_invariants.py  test_models.py  test_report_workspace_invariants.py  test_seed_demo_invariants.py  test_static_serve_invariants.py  test_storage.py  test_stream_chat.py  test_ws_removed_invariants.py
deploy/: .env.production.example
docs/: PRD.md  deployment.md
docs/lessons/: 01-frontend-ux-bugs.md  02-llm-pitfalls.md  03-fastapi-and-tooling.md  04-testing-strategy.md  README.md
docs/refactor/: 2026-07-22-cleanup.md
scripts/: dev-all.sh  seed_demo.py  setup.sh
web/: .env.example  .env.production  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
web/app/achievements/: page.tsx
web/app/report/: page.tsx
web/app/settings/: page.tsx
web/app/today/: page.tsx
web/components/: ChatWindow.tsx  CompleteTaskModal.tsx  MainBoard.tsx  Markdown.tsx  Popover.tsx  ToolCallCard.tsx
web/lib/: api.ts  templates.ts
web/lib/hooks/: useChatStream.ts
web/scripts/: test_stream_accumulate.mjs
