[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cockpit"
version = "0.1.0"
description = "你的个人项目驾驶舱——不替你干活，替你记住你干过什么、要干什么。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CookieJobs" }
]
keywords = [
    "productivity",
    "task-management",
    "achievements",
    "ai-agent",
    "personal-knowledge"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Productivity",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "anthropic>=0.39",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
llm-anthropic = [
    "anthropic>=0.39",
]
llm-ollama = [
    # 走 HTTP API，不需要额外依赖
]
llm-openai = [
    "openai>=1.30",
]
all = [
    "cockpit[dev,llm-anthropic,llm-ollama,llm-openai]",
]

[project.urls]
Homepage = "https://github.com/CookieJobs/cockpit"
Documentation = "https://github.com/CookieJobs/cockpit/blob/main/docs/PRD.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "web*", "scripts*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # Use of assert detected - OK in tests
    "E501",  # Line too long - handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
